--- a/index.html
+++ b/index.html
@@ -4,9 +4,84 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Donate For Good</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Lobster&family=Manrope&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <section class="header">
+    <div class="dark-overlayer">
+      <h1>Give A Hand To Make The World Better</h1>
+      <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+      <a class="donation-btn" href="">Donate Now</a>
+    </div>
+  </section>
+  <section class="donate-for-good">
+    <div class="donate-for-good-container">
+      <h2 class="donation-title">Donate For Good</h2>
+      <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+      <div class="donation-amount">
+        <button>5$</button>
+        <button id="selected-amount">10$</button>
+        <button>15$</button>
+        <button>20$</button>
+        <button>50$</button>
+      </div>
+      <input type="text" placeholder="Other Amount (Taka)">
+      <a class="donation-btn" href="">Donate Now</a>
+    </div>
+  </section>
+  <section class="donation-plan">
+    <div class="donation-plan-container">
+      <h2 class="donation-title">Our Donate Plan</h2>
+      <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+      <div class="all-plans">
+        <div id="food-plan" class="plan-item">
+          <img src="images/food.png" alt="Food">
+          <h2>Food for a family</h2>
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+        </div>
+        <div id="shelter-plan" class="plan-item">
+          <img src="images/family.png" alt="Family">
+          <h2>Shelter for a family</h2>
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+        </div>
+        <div id="education-plan" class="plan-item">
+          <img src="images/education.png" alt="Education">
+          <h2>Education for a child</h2>
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="how-to-contribute center">
+    <div class="how-to-contribute-container">
+      <div class="left-side-contribution">
+        <h2 class="donation-title">Their lives depend on your donation</h2>
+        <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+        <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+        <a class="donation-btn" href="">How to Contribute?</a>
+      </div>
+      <div class="right-side-contribution">
+        <img src="images/donation.jpg" alt="Donation">
+      </div>
+    </div>
+  </section>
+  <section class="get-updates center">
+    <div class="get-updates-container">
+      <h2 class="donation-title">Get My Updates</h2>
+      <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+      <div class="subscribe-box">
+        <input type="email" placeholder="Email">
+        <a class="donation-btn" href="">Subscribe</a>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <p class="big-text">Be Humble</p>
+    <p class="small-text">I'm gonna do it</p>
+  </footer>
 </body>
 </html>
