Donation website completed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donate For Good</title>
+  <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Lobster&family=Manrope&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -14,14 +15,14 @@
   <section class="header">
     <div class="dark-overlayer">
       <h1>Give A Hand To Make The World Better</h1>
-      <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+      <p>There are a lot of people who need helps. You can make a difference by giving a helping hand to them.</p>
       <a class="donation-btn" href="">Donate Now</a>
     </div>
   </section>
   <section class="donate-for-good">
     <div class="donate-for-good-container">
       <h2 class="donation-title">Donate For Good</h2>
-      <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+      <p class="donation-details">This is a non-profit organization of donation for the people who need it and here you can participate for the good.</p>
       <div class="donation-amount">
         <button>5$</button>
         <button id="selected-amount">10$</button>
@@ -29,29 +30,31 @@
         <button>20$</button>
         <button>50$</button>
       </div>
-      <input type="text" placeholder="Other Amount (Taka)">
-      <a class="donation-btn" href="">Donate Now</a>
+      <form action="">
+        <input type="text" placeholder="Other Amount (USD)">
+        <button type="submit" class="donation-btn" href="">Donate Now</button>
+      </form>
     </div>
   </section>
   <section class="donation-plan">
     <div class="donation-plan-container">
       <h2 class="donation-title">Our Donate Plan</h2>
-      <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+      <p class="donation-details">We believe a better world is possible. You are making this happen. Let's make a better future for a better world</p>
       <div class="all-plans">
         <div id="food-plan" class="plan-item">
           <img src="images/food.png" alt="Food">
           <h2>Food for a family</h2>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+          <p>Food will be served to hungry families. Each meal will be a nutritional platter. Donate now to help hungry families.</p>
         </div>
         <div id="shelter-plan" class="plan-item">
           <img src="images/family.png" alt="Family">
           <h2>Shelter for a family</h2>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+          <p>Homelessness is really hard to overcome without help from someone else even with a job. Donate now to help the homeless.</p>
         </div>
         <div id="education-plan" class="plan-item">
           <img src="images/education.png" alt="Education">
           <h2>Education for a child</h2>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+          <p>A child without education is like a bird without wings. Together, we can do more than just get kids in the classroom.</p>
         </div>
       </div>
     </div>
@@ -60,8 +63,8 @@
     <div class="how-to-contribute-container">
       <div class="left-side-contribution">
         <h2 class="donation-title">Their lives depend on your donation</h2>
-        <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-        <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+        <p class="donation-details">No family should ever have to worry where their next meal is coming from. But for too many, that's the reality.</p>
+        <p class="donation-details">Thanks to our supporters, we have met our goal of providing meals to those families in need.</p>
         <a class="donation-btn" href="">How to Contribute?</a>
       </div>
       <div class="right-side-contribution">
@@ -72,11 +75,11 @@
   <section class="get-updates center">
     <div class="get-updates-container">
       <h2 class="donation-title">Get My Updates</h2>
-      <p class="donation-details">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-      <div class="subscribe-box">
+      <p class="donation-details">Are you passionate about food for a family, shelter for a family and education for a child? Sign up for newsletter.</p>
+      <form class="subscribe-box">
         <input type="email" placeholder="Email">
-        <a class="donation-btn" href="">Subscribe</a>
-      </div>
+        <button type="submit" class="donation-btn" href="">Subscribe</button>
+      </form>
     </div>
   </section>
   <footer>
