new section added

--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
     <div class="dark-overlayer">
       <h1>Give A Hand To Make The World Better</h1>
       <p>There are a lot of people who need helps. You can make a difference by giving a helping hand to them.</p>
-      <a class="donation-btn" href="">Donate Now</a>
+      <a class="donation-btn" href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">Donate Now</a>
     </div>
   </section>
   <section class="donate-for-good">
     <div class="donate-for-good-container">
       <h2 class="donation-title">Donate For Good</h2>
       <p class="donation-details">This is a non-profit organization of donation for the people who need it and here you can participate for the good.</p>
-      <div class="donation-amount">
-        <button>5$</button>
-        <button id="selected-amount">10$</button>
-        <button>15$</button>
-        <button>20$</button>
-        <button>50$</button>
-      </div>
-      <form action="">
-        <input type="text" placeholder="Other Amount (USD)">
-        <button type="submit" class="donation-btn" href="">Donate Now</button>
+      <form action="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+        <div class="donation-amount">
+          <button type="button">5$</button>
+          <button id="selected-amount" type="button">10$</button>
+          <button type="button">15$</button>
+          <button type="button">20$</button>
+          <button type="button">50$</button>
+        </div>
+        <div>
+          <input type="text" placeholder="Other Amount (USD)">
+          <button type="submit" class="donation-btn" href="">Donate Now</button>
+        </div>
       </form>
     </div>
   </section>
@@ -59,13 +61,69 @@
       </div>
     </div>
   </section>
+  <section class="our-volunteers center">
+    <div class="our-volunteers-container">
+      <h2 class="donation-title">Our Volunteers</h2>
+      <p class="donation-details">Our volunteers are there to help the people in need by preparing food and distributing them, searching the people who need shelter and teaching the childrens.</p>
+      <div class="all-volunteers">
+        <div class="volunteer">
+          <img src="images/volunteer1.png" alt="Volunteer1">
+          <h3>John Chatter</h3>
+          <p>Secretary</p>
+          <div class="social-medias">
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/fb.png" alt="Facebook">
+            </a>
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/linkedin.png" alt="Linked In">
+            </a>
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/twitter.png" alt="Twitter">
+            </a>
+          </div>
+        </div>
+        <div class="volunteer">
+          <img src="images/volunteer2.png" alt="Volunteer1">
+          <h3>Sherika Hankins</h3>
+          <p>Project Manager </p>
+          <div class="social-medias">
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/fb.png" alt="Facebook">
+            </a>
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/linkedin.png" alt="Linked In">
+            </a>
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/twitter.png" alt="Twitter">
+            </a>
+          </div>
+        </div>
+        <div class="volunteer">
+          <img src="images/volunteer3.png" alt="Volunteer1">
+          <h3>John Doe</h3>
+          <p>Senior Volunteer</p>
+          <div class="social-medias">
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/fb.png" alt="Facebook">
+            </a>
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/linkedin.png" alt="Linked In">
+            </a>
+            <a href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
+              <img src="images/twitter.png" alt="Twitter">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="how-to-contribute center">
     <div class="how-to-contribute-container">
       <div class="left-side-contribution">
         <h2 class="donation-title">Their lives depend on your donation</h2>
         <p class="donation-details">No family should ever have to worry where their next meal is coming from. But for too many, that's the reality.</p>
         <p class="donation-details">Thanks to our supporters, we have met our goal of providing meals to those families in need.</p>
-        <a class="donation-btn" href="">How to Contribute?</a>
+        <a class="donation-btn" href="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">How to Contribute?</a>
       </div>
       <div class="right-side-contribution">
         <img src="images/donation.jpg" alt="Donation">
@@ -76,7 +134,7 @@
     <div class="get-updates-container">
       <h2 class="donation-title">Get My Updates</h2>
       <p class="donation-details">Are you passionate about food for a family, shelter for a family and education for a child? Sign up for newsletter.</p>
-      <form class="subscribe-box">
+      <form class="subscribe-box" action="https://www.linkedin.com/in/sumon-kaysar-5543781b8/">
         <input type="email" placeholder="Email">
         <button type="submit" class="donation-btn" href="">Subscribe</button>
       </form>
